--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </h1>
         <ul class="nav-links">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="Carpets.html">Products</a></li>
+          <li><a href="carpets.html">Products</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
